# reacy_mini_app_suite

./: .gitignore  =2.2.0  CHANGELOG.md  PROJECT_STATUS.md  QUICKSTART_MUSIC_REACTIVE.md  README.md  demo_music_reactive.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests_simple.sh  test_dance2.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmb/: config.yaml
.bmad/bmgd/: config.yaml
.bmad/bmm/: config.yaml
.bmad/cis/: config.yaml
.bmad/core/: config.yaml
archive/singing-experiments/: README.md  emotion_song_player.py  test_emotion_singing.py  test_emotion_sounds.py  test_sound_library.py
docs/: PRD.md  README.md  THEMES.md  api-reference.md  assistant-instructions.md  daemon-setup.md  getting-started.md  pre-prd.reachy-app-suite.md
docs/other-apps/: THEME_IMPLEMENTATION.md  music-reactive-app.md  musical-notes-feature.md
docs/reachy-remix/: PRD.md  PROGRESS.md  SPRINT_COMPLETE.md  reachy-remix-architecture.md  reachy-remix-stories.md
docs/sprint-artifacts/: sdk-integration-plan.md  workflow-init-summary.md
examples/: gesture_demo.py  simple_demo.py  test_emotion_detection.py  test_gestures.py  test_singing.py  test_wrapper.py
scripts/: run_tests.sh  setup_dev.sh
src/apps/: __init__.py
src/apps/duet-stage/: __init__.py  main.py
src/apps/karaoke-duet/: __init__.py  main.py
src/apps/music-reactive/: __init__.py  main.py
src/apps/oobe-demo-menu/: __init__.py  main.py
src/apps/reachy-remix/: EMOJI_REFERENCE.md  UI_REDESIGN.md  preview_themes.py  reachy_remix.py  theme_preview.html
src/apps/reachy-remix/archive/: THEMES_README.md  quick_theme_test.py
src/apps/reachy-sings/: __init__.py  main.py
src/apps/reachy_dashboard/: README.md  index.html  pyproject.toml
src/apps/reachy_dashboard/reachy_dashboard/: main.py
src/common/: __init__.py
src/common/core/: __init__.py  config.py  logger.py
src/common/reachy/: __init__.py  audio_player.py  audio_reactive.py  choreography.py  emotion_detector.py  note_player.py  robot_wrapper.py  safe_motions.py  tts_engine.py
src/common/ui/: __init__.py  server.py
tests/: conftest.py
tests/apps/: test_motion_engine.py  test_play_execution.py  test_state_management.py
tests/common/: test_config.py  test_safe_motions.py
