[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-app-suite"
version = "0.1.0"
description = "A suite of delightful applications for Reachy Mini robots"
authors = [
    {name = "Reachy App Suite Contributors", email = "contact@pollen-robotics.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core dependencies (compatible with reachy-mini SDK)
    "numpy>=2.2.0",
    
    # Reachy Mini SDK (installed via requirements.txt)
    # "reachy_mini>=1.1.2",
    
    # Web framework (for UI apps)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Audio handling
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    
    # Utilities
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.3",
    "mypy>=1.6.0",
]

huggingface = [
    "huggingface-hub>=0.19.0",
    "transformers>=4.35.0",
]

# Entry points disabled until apps are fully implemented
# [project.scripts]
# reachy-oobe = "apps.oobe_demo_menu.main:main"
# reachy-sings = "apps.reachy_sings.main:main"
# reachy-karaoke = "apps.karaoke_duet.main:main"
# reachy-duet = "apps.duet_stage.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["apps*", "common*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | src-reference
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "src-reference",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [
    "src-reference",
    "tests",
]
